[project]
name = "comfyui-gridsplit"
description = "Grid tools for ComfyUI: split a stitched grid/carousel/collage into panels, and stitch one image into an RxC grid — no model, any resolution."
version = "1.0.0"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/workordie/ComfyUI-GridSplit"

[tool.comfy]
PublisherId = "workordie"
DisplayName = "ComfyUI-GridSplit"
