[project]
name = "comfyui-autogrid"
description = "Auto Grid — grid tools for ComfyUI: auto-detect and split a stitched grid/carousel/collage into panels, and stitch images into a grid with an interactive in-node picker (auto preserve / manual crop-to-ratio). No model, any resolution."
version = "1.1.0"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/workordie/ComfyUI-AutoGrid"

[tool.comfy]
PublisherId = "workordie"
DisplayName = "ComfyUI-AutoGrid"
